build_usb_check_v4.txt
cargo : warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
At line:1 char:1
+ cargo check -p base-station --target thumbv6m-none-eabi --features rp ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: profil...workspace root::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
package:   C:\Users\Mike\OneDrive\Documents\git\rocket_vR\rocket\Cargo.toml
workspace: C:\Users\Mike\OneDrive\Documents\git\rocket_vR\Cargo.toml
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   C:\Users\Mike\OneDrive\Documents\git\rocket_vR\base-station\Cargo.toml
workspace: C:\Users\Mike\OneDrive\Documents\git\rocket_vR\Cargo.toml
    Checking base-station v0.1.0 (C:\Users\Mike\OneDrive\Documents\git\rocket_vR\base-station)
error[E0560]: struct `Hardware` has no field named `usb_driver`
   --> base-station\src\hardware.rs:107:13
    |
107 |             usb_driver: embassy_rp::usb::Driver::new(r.UsbR.usb, Irqs),
    |             ^^^^^^^^^^ `Hardware` does not have this field
    |
    = note: all struct fields are already assigned

error[E0609]: no field `UsbR` on type `AssignedResources`
   --> base-station\src\hardware.rs:107:56
    |
107 |             usb_driver: embassy_rp::usb::Driver::new(r.UsbR.usb, Irqs),
    |                                                        ^^^^ unknown field
    |
    = note: available fields are: `RadioR`, `NeopixelR`

error[E0277]: the trait bound `Irqs: Binding<_, embassy_rp::usb::InterruptHandler<_>>` is not satisfied
   --> base-station\src\hardware.rs:107:66
    |
107 |             usb_driver: embassy_rp::usb::Driver::new(r.UsbR.usb, Irqs),
    |                         ----------------------------             ^^^^ unsatisfied trait bound
    |                         |
    |                         required by a bound introduced by this call
    |
help: the trait `Binding<_, embassy_rp::usb::InterruptHandler<_>>` is not implemented for `Irqs`
   --> base-station\src\hardware.rs:25:1
    |
 25 | / bind_interrupts!(pub struct Irqs {
 26 | |     // Required for PIO-based WS2812 NeoPixel driver.
 27 | |     PIO0_IRQ_0 => pio::InterruptHandler<PIO0>;
...   |
 31 | |                dma::InterruptHandler<DMA_CH2>;
 32 | | });
    | |__^
    = help: the following other types implement trait `Binding<I, H>`:
              `Irqs` implements `Binding<DMA_IRQ_0, InterruptHandler<DMA_CH0>>`
              `Irqs` implements `Binding<DMA_IRQ_0, InterruptHandler<DMA_CH1>>`
              `Irqs` implements `Binding<DMA_IRQ_0, InterruptHandler<DMA_CH2>>`
              `Irqs` implements `Binding<PIO0_IRQ_0, InterruptHandler<PIO0>>`
note: required by a bound in `Driver::<'d, T>::new`
   --> C:\Users\Mike\.cargo\git\checkouts\embassy-c08a80187403f815\777b2dc\embassy-rp\src\usb.rs:111:46
    |
111 |     pub fn new(_usb: Peri<'d, T>, _irq: impl Binding<T::Interrupt, InterruptHandler<T>>) -> Self {
    |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound 
in `Driver::<'d, T>::new`
    = note: the full name for the type has been written to 'C:\Users\Mike\OneDrive\Documents\git\rocket_vR\target\thumb
v6m-none-eabi\debug\deps\base_station-9e3c716d29e1bae4.long-type-5189508917294217762.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `bind_interrupts` (in Nightly builds, run with -Z macro-backtrace for 
more info)

Some errors have detailed explanations: E0277, E0560, E0609.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `base-station` (bin "base-station") due to 3 previous errors
